force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <label>Supplier</label>
    <nameField>
        <displayFormat>S{00000}</displayFormat>
        <label>Supplier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>