force-app/main/default/objects/Supplier__c/fields/Reliability_Score__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Score__c</fullName>
    <label>Reliability Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>