force-app/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Contact_Info__c</columns>
    <columns>Region__c</columns>
    <columns>Reliability_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>